ART 3.0.1
* Removed column autosizing for xls and xlsx output. Was causing greatly increased execution times for xlsx output.
* Always use report datasource for dynamic lovs

ART 3.0
* Reorganised the code for easier maintenance and enhanced user experience
 - now using maven, spring mvc, bootstrap, among other libraries
* Renamed "Report on Column" query types to "Group"
* Renamed "Graph" query types to "Chart"
* Renamed "Query" concept to "Report"
* Renamed "View Modes" to "Report Formats"
* Renamed "Number" parameter data type to "Double"
* Renamed "Pivot Table" report types to "JPivot"
* Modified application settings configuration. Settings need to be manually re-entered.
* Modified application urls. Previously bookmarked urls may no longer work.
* Added ability to create reports based on FreeMarker templates
* Added ability to create reports based on Thymeleaf templates
* Added ability to create reports based on MS Word (docx), LibreOffice Writer (odt) and MS PowerPoint (pptx) templates
* Added docx, odt, ods report formats for tabular and jasper reports
* Added syntax highlighting during report creation
* Added tabbed dashboards option
* Added Gridstack Dashboard report type
* Added ReactPivot report type
* Added PivotTable.js report types
* Added Dygraphs report types
* Added DataTables report types
* Added C3.js report type
* Added Chart.js report type
* Added Datamaps report types
* Added Leaflet report type
* Added OpenLayers report type
* Added Tabular Heatmap report type
* Added ability to create csv output jobs
* Added ability to create fixed width output jobs
* Added ability to do OLAP analysis using saiku
* Allow multi-value parameters with Oracle databases to have more than 1000 items
* Added ability to output and schedule dashboard reports as pdf
* Allow for specifying specific colours to be used for given chart series
* Allow for localization of parameter labels and help text
* Enable use of barcode4j barcodes in jasperreports