@@ -1,6 +1,7 @@
 ART 3.0.1
 * Removed column autosizing for xls and xlsx output. Was causing greatly increased execution times for xlsx output.
 * Always use report datasource for dynamic lovs
+* For cached result job, don't stop if create table process has an error
 
 ART 3.0
 * Reorganised the code for easier maintenance and enhanced user experience
